--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["es2015"],
-  "plugins": ["syntax-async-functions", "transform-runtime", "transform-async-to-generator"]
+  "presets": ["es2015-node4"]
 }
