--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Silly module to transform html pages to amp, using html-to-article-json & article-json-to-amp",
   "scripts": {
-    "test": "semistandard | snazzy"
+    "test": "npm prune && semistandard | snazzy"
   },
   "bin": {
     "html-to-amp": "bin/html-to-amp.js"
@@ -25,15 +25,16 @@
   "dependencies": {
     "article-json-to-amp": "^1.2.0",
     "babel-core": "^6.4.5",
-    "babel-plugin-syntax-async-functions": "^6.3.13",
-    "babel-plugin-transform-async-to-generator": "^6.4.6",
-    "babel-plugin-transform-runtime": "^6.4.3",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-node4": "^2.0.3",
     "co": "^4.6.0",
     "html-to-article-json": "^1.5.0",
     "node-fetch": "^1.3.3",
     "request-image-size": "^1.2.2",
     "then-fs": "^2.0.0",
     "whacko": "^0.19.1"
+  },
+  "devDependencies": {
+    "semistandard": "^7.0.5",
+    "snazzy": "^2.0.1"
   }
 }
