--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Silly module to transform html pages to amp, using html-to-article-json & article-json-to-amp",
   "scripts": {
     "test": "npm prune && nyc ava && semistandard | snazzy",
-    "prepublish": "mkdir -p dist && babel lib --out-dir dist"
-  },
-  "bin": {
-    "html-to-amp": "bin/html-to-amp.js"
+    "prepublish": "mkdir -p dist && babel lib --out-dir dist",
+    "posttest": "readme package.json --travis > readme.md"
   },
   "repository": {
     "type": "git",
@@ -30,10 +28,11 @@
     "request-image-size": "^1.2.2"
   },
   "devDependencies": {
-    "ava": "^0.11.0",
+    "ava": "^0.12.0",
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
+    "package-json-to-readme": "^1.5.0",
     "semistandard": "^7.0.5",
     "semistandard-deku": "github:micnews/semistandard#deku",
     "snazzy": "^2.0.1"
