--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-to-amp",
   "version": "1.0.0",
-  "description": "Silly module to transform html pages to amp, using html-to-article-json & article-json-to-amp",
+  "description": "Small module to transform html pages to amp, using [html-to-article-json](https://www.npmjs.com/package/html-to-article-json) & [article-json-to-amp](https://www.npmjs.com/package/article-json-to-amp)",
   "scripts": {
     "test": "npm prune && nyc ava && semistandard | snazzy",
     "prepublish": "mkdir -p dist && babel lib --out-dir dist",
